// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a single author 1`] = `
<style>
{
  "S1": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "color": "rgba(0,102,153,1.00)",
    "flex-direction": "row",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "13px",
    "line-height": "15px",
  },
  "S2": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "flex-direction": "column",
  },
}
</style>

<div
  className="S2"
>
  <div
    className="S1"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`2. with a given section colour 1`] = `
<style>
{
  "IS1": {
    "color": "rgba(0,0,255,1.00)",
  },
  "S1": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "flex-direction": "row",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "13px",
    "line-height": "15px",
  },
  "S2": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "flex-direction": "column",
  },
}
</style>

<div
  className="S2"
>
  <div
    className="IS1 S1"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`3. with given styles 1`] = `
<style>
{
  "IS1": {
    "color": "rgba(255,0,0,1.00)",
    "textDecoration": "underline",
  },
  "S1": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "flex-direction": "row",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "13px",
    "line-height": "15px",
  },
  "S2": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "flex-direction": "column",
  },
}
</style>

<div
  className="S2"
>
  <div
    className="IS1 S1"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`4. with a a very long byline 1`] = `
<style>
{
  "IS1": {
    "color": "rgba(0,0,255,1.00)",
  },
  "IS2": {
    "color": "rgba(0,0,255,1.00)",
  },
  "IS3": {
    "color": "rgba(0,0,255,1.00)",
  },
  "IS4": {
    "color": "rgba(0,0,255,1.00)",
  },
  "IS5": {
    "color": "rgba(0,0,255,1.00)",
  },
  "IS6": {
    "color": "rgba(0,0,255,1.00)",
  },
  "S1": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "flex-direction": "row",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "13px",
    "line-height": "15px",
  },
  "S2": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "flex-direction": "column",
  },
}
</style>

<div
  className="S2"
>
  <div
    className="IS1 S1"
  >
    Camilla Long
  </div>
  <div
    className="IS2 S1"
  >
    , Environment Editor, 
  </div>
  <div
    className="IS3 S1"
  >
    Camilla Long
  </div>
  <div
    className="IS4 S1"
  >
    , Environment Editor, 
  </div>
  <div
    className="IS5 S1"
  >
    Camilla Long
  </div>
  <div
    className="IS6 S1"
  >
    , Environment Editor
  </div>
</div>
`;
